[package]
name                    = "emdocs"
description             = "A client for the emdocs p2p online text buffer sharing protocol."
authors                 = ["Danny McClanahan <dmcC2@hypnicjerk.ai>"]
license                 = "AGPL-3.0-or-later"
repository              = "https://github.com/cosmicexplorer/emdocs"
version                 = "0.0.0"
edition                 = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
emdocs-protocol = { path = "protocol" }
indexmap = "1.8.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
proptest = "1"

[workspace]
resolver = "2"
members = [
  ".",
  "protocol",
]
default-members = [
  ".",
  "protocol",
]
