[package]
name                    = "emdocs"
description             = "A client for the emdocs p2p online text buffer sharing protocol."
authors                 = ["Danny McClanahan <dmcC2@hypnicjerk.ai>"]
license                 = "AGPL-3.0-or-later"
repository              = "https://github.com/cosmicexplorer/emdocs"
version                 = "0.0.0"
edition                 = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
emdocs-protocol = { path = "protocol" }
serde_json = "1"
tokio = { version = "1.19.2", features = ["full"] }
tonic = { version = "0.7.2", features = ["prost"] }

[dev-dependencies]
proptest = "1"

[workspace]
resolver = "2"
members = [
  ".",
  "protocol",
  "protocol/unicode-buffer",
]
default-members = [
  ".",
  "protocol/unicode-buffer",
]
