[package]
name                    = "emdocs-protocol"
description             = "A p2p online text buffer sharing protocol."
authors                 = ["Danny McClanahan <dmcC2@hypnicjerk.ai>"]
license                 = "AGPL-3.0-or-later"
repository              = "https://github.com/cosmicexplorer/emdocs"
version                 = "0.0.0"
edition                 = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-lock = "2.5.0"
displaydoc              = { git = "https://github.com/yaahc/displaydoc", rev = "7159bb5c9d41ca3c7ccf04ae86ae3acb0ea12a27" }
indexmap = "1.9.0"
prost = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0.30"
tokio = { version = "1.19.2", features = ["full"] }
tonic = "0.7"
uuid = { version = "1.1.2", features = ["v4"] }

[dependencies.serde-mux]
git = "https://github.com/cosmicexplorer/serde-mux"
rev = "6f5a4f7eeb78875ec5d3316bf741e8715b7fbc8e"
features = ["protobuf"]

[build-dependencies]
# FIXME: Switch to Apache Thrift! See thrift-generated rust code at
# <https://github.com/cosmicexplorer/learning-progress-bar/blob/1ada17c77cf14a948430161f5c648ae3375aa4ba/terminal/thrift/streaming_interface.rs>
# for example.
prost-build = "0.10"
tonic-build = "0.7"

[dev-dependencies]
proptest = "1"
